Added option to include or exclude HostName as tag

--- a/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
+++ b/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
@@ -17,6 +17,7 @@
         "sinkOptions": {
           "ApplicationName": "testApp",
           "InstanceName": "testInstance",
+          "IncludeHostname": true,
           "ConnectionInfo": {
             "Uri": "http://localhost:8086",
             "BucketName": "logs",
