Added option to include or exclude Level and Severity as tags

--- a/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
+++ b/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
@@ -18,6 +18,8 @@
           "ApplicationName": "testApp",
           "InstanceName": "testInstance",
           "IncludeHostname": true,
+          "IncludeLevel": true,
+          "IncludeSeverity": true,
           "ConnectionInfo": {
             "Uri": "http://localhost:8086",
             "BucketName": "logs",
