--- a/Serilog.Sinks.InfluxDB/Serilog.Sinks.InfluxDB.csproj
+++ b/Serilog.Sinks.InfluxDB/Serilog.Sinks.InfluxDB.csproj
@@ -22,6 +22,8 @@
     <PackageReleaseNotes>
       2.3.4 (only for InfluxDB v2.XX):
       - New parameter IncludeHostname default to true
+      - New parameter IncludeLevel default to true
+      - New parameter IncludeSeverity default to true
       2.3.3:
       - **Warning - Use https://www.nuget.org/packages/Serilog.Sinks.InfluxDBV1.Syslog nuget for InfluxDB V1.XX**
       - Update nuget dependencies including InfluxDB.Client which use InfluxDBClient constructor instead of InfluxDBClientFactory
