--- a/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
+++ b/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
@@ -20,6 +20,7 @@
           "IncludeHostname": true,
           "IncludeLevel": true,
           "IncludeSeverity": true,
+          "IncludeDefaultFields": true,
           "ConnectionInfo": {
             "Uri": "http://localhost:8086",
             "BucketName": "logs",
