--- a/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
+++ b/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
@@ -20,6 +20,10 @@
           "IncludeHostname": true,
           "IncludeLevel": true,
           "IncludeSeverity": true,
+          "IncludeFacility": true,
+          "IncludeTimestamp": true,
+          "IncludeVersion": true,
+          "IncludeProcId": true,
           "ConnectionInfo": {
             "Uri": "http://localhost:8086",
             "BucketName": "logs",
