--- a/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
+++ b/samples/Serilog.Sinks.InfluxDB.Console.AppSettings/appsettings.json
@@ -15,6 +15,7 @@
       "Name": "InfluxDB",
       "Args": {
         "sinkOptions": {
+          "MeasurementName": "syslog",
           "ApplicationName": "testApp",
           "InstanceName": "testInstance",
           "IncludeHostname": true,
